reworked the mal

--- a/jsspillmal/style.css
+++ b/jsspillmal/style.css
@@ -3,3 +3,16 @@ canvas {
   display: block;
   margin: auto;
 }
+
+#start-screen, #death-screen {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  text-align: center;
+  padding-top: 100px;
+}
